# cmake-sdl3-opengl3-imgui-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: CMain.hpp
src/: CMain.cpp
